# Auditing-Closed-Loop-Learning-in-Recurrent-Neural-Networks

./: .gitignore  README.md  environment.yml  pyproject.toml  reproduction_log.md  requirements.txt
closed_loop_repro/: __init__.py  config.py  io.py  progress.py  random.py
closed_loop_repro/analysis/: __init__.py  gains.py  make_claim_tables.py  original_artifact_audit.py  paper_signature_check.py  recompute_timeseries_metrics.py  spectra.py  spectral_stages.py  stage_changepoints.py  stages.py  statistics.py  supplemental_audit_tables.py
closed_loop_repro/models/: __init__.py  gru.py  linear_rnn.py  low_rank_rnn.py  tanh_rnn.py
closed_loop_repro/plotting/: figures.py  make_all_figures.py
closed_loop_repro/sweeps/: __init__.py  generalization_sweep.py  robustness_sweep.py  seed_sweep.py  tradeoff_sweep.py
closed_loop_repro/tasks/: __init__.py  angular_integration.py  base.py  double_integrator.py  tracking_task.py
closed_loop_repro/training/: __init__.py  experiment.py  run_pair.py  train_open_loop.py
configs/figures/: tmlr.yaml
configs/generalization/: maximal.yaml  path_integration_hard.yaml
configs/original/: double_integrator_artifact_full.yaml  double_integrator_artifact_sanity.yaml  double_integrator_full.yaml  (+1 more)
configs/robustness/: maximal.yaml
paper/: README.md
scripts/: build_anonymous_supplement.sh  run_full_audit.sh  run_original_reproduction.sh  run_paper_protocol_sanity.sh  run_smoke.sh  run_targeted_c2_a1_a2.sh  run_targeted_c2_c4_c5.sh
tests/: test_analysis.py  test_cli_smoke.py  test_sweeps.py  test_tasks_models.py  test_tradeoff.py
(+30 files in other folders)
