[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "closed-loop-repro"
version = "0.1.0"
description = "Reproduction and robustness audit for closed-loop RNN learning dynamics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "torch>=2.2",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.4",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "nbformat>=5.10",
  "nbconvert>=7.16",
]

[tool.setuptools.packages.find]
include = ["closed_loop_repro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
